Update API_URL to production Google Apps Script URL

--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
   <script>
     // ===== API設定 =====
     // ↓↓↓ デプロイ後のGoogle Apps Script URLに置き換えてください ↓↓↓
-    const API_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbxBdUPO88QK_T6ZP2gySeXz2DIUQJ1-virfUVp1n-iFf8Vr6bmcch-2r5zTd-55v0d2pA/exec';
     
     // ===== データ定義 =====
     const studyData = {
