Update and rename dashboard.html to index.html

--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
         Google Apps ScriptのウェブアプリURLを設定してください。<br>
         未設定の場合はローカルモードで動作します。
       </p>
-      <input type="text" id="api-url-input" class="modal-input" placeholder="https://script.google.com/macros/s/xxxxx/exec">
+      <input type="text" id="api-url-input" class="modal-input" placeholder="https://script.google.com/macros/s/AKfycbxBdUPO88QK_T6ZP2gySeXz2DIUQJ1-virfUVp1n-iFf8Vr6bmcch-2r5zTd-55v0d2pA/exec">
       <div class="modal-buttons">
         <button class="modal-btn cancel" onclick="closeSettingsModal()">キャンセル</button>
         <button class="modal-btn save" onclick="saveApiUrl()">保存</button>
